# lidar_human_track

./: .gitignore  .gitmodules  Laser Tracking.xmind  ReadMe  greeter.launch
src/human_track/: CMakeLists.txt  main.cc  package.xml
src/human_track/include/: Ferns.h  HumanExaminer.h  HumanTrack.h  SSD_Detector.hpp  clusterFrame.h  detector.hpp  extra.h  human.h  human.hpp  kcftracker.hpp  laser.h  laserLib.hpp  laserListener.h  lengine.hpp  lfeatures.hpp  lgeometry.hpp  ltracker.h  motion.h  object_tracking.hpp  observation.hpp  params_tool.h  readParams.h  recognizer.hpp  score_map.h  track_utils.h  tracker.h
src/human_track/lib/: Ferns.cpp  HumanExaminer.cc  HumanTrack.cc  camera.cc  connect.cc  fhog.cpp  human.cc  kcftracker.cpp  laser.cc  ltracker.cc  motion.cc  readParams.cc  readme  score_map.cc  track_utils.cc
src/human_track/libSSD/: SSD_Detector.cpp  ncs_param.cpp
src/human_track/msg/: IcpPose2d.msg  states.msg
src/human_track/src/: detector.cpp  header.cpp  human.cpp  laserLib.cpp  laserListener.cpp  lengine.cpp  lfeatures.cpp  lgeometry.cpp  object_tracking.cpp  observation.cpp  params_tool.cpp  projectTools.cpp  recognizer.cpp  tracker.cpp
